Include # of test stats and clean up styling

--- a/test/storybook/docs/Testing/Behavior/Extends/Overview.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/Overview.mdx
@@ -21,40 +21,44 @@ The `extends` functionality enables component inheritance and composition patter
 Test cases are organized by **complexity** - from basic inheritance patterns to advanced real-world reactive controllers. All `extends` tests reside under <code>test/wdio/ts-target/extends-*</code>.
 
 export const ExtendsCoverageSummary = () => {
-  const items = overlay.items || [];
-  const totalComponents = items.length;
-  const testedComponents = items.filter(item => item.tested).length;
-  const coveragePercentage = totalComponents > 0 ? Math.round((testedComponents / totalComponents) * 100) : 0;
-  
   const testCases = Object.values(overlay.testCaseStatus || {});
   const implementedCases = testCases.filter(tc => tc.implemented).length;
   const totalCases = testCases.length;
+  const coveragePercentage = totalCases > 0 ? Math.round((implementedCases / totalCases) * 100) : 0;
+  
+  // Calculate total test count from implemented test cases
+  const totalTests = testCases.reduce((sum, tc) => sum + (tc.testCount || 0), 0);
   
   return (
     <div style={{ background: '#f8f9fa', padding: '16px', borderRadius: '8px', marginBottom: '24px' }}>
-      <div style={{ display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(200px, 1fr))', gap: '16px' }}>
+      <div style={{ display: 'grid', gridTemplateColumns: 'repeat(auto-fit, minmax(220px, 1fr))', gap: '16px' }}>
         <div>
-          <strong>Component Coverage</strong><br/>
-          <span style={{ fontSize: '24px', color: coveragePercentage === 100 ? '#16a34a' : '#f59e0b' }}>
-            {testedComponents}/{totalComponents} ({coveragePercentage}%)
-          </span>
+          <strong>Test Cases Implemented</strong><br/>
+          <span style={{ fontSize: '24px', color: implementedCases === totalCases ? '#16a34a' : '#f59e0b' }}>
+            {implementedCases}/{totalCases}
+          </span><br/>
+          <span style={{ fontSize: '14px', color: '#6b7280' }}>({coveragePercentage}% complete)</span>
         </div>
         <div>
-          <strong>Test Cases</strong><br/>
-          <span style={{ fontSize: '24px', color: implementedCases === totalCases ? '#16a34a' : '#f59e0b' }}>
-            {implementedCases}/{totalCases} implemented
-          </span>
+          <strong>Total Tests Passing</strong><br/>
+          <span style={{ fontSize: '24px', color: '#16a34a' }}>
+            {totalTests}
+          </span><br/>
+          <span style={{ fontSize: '14px', color: '#6b7280' }}>across all test cases</span>
         </div>
         <div>
           <strong>Status</strong><br/>
           <span style={{ 
-            fontSize: '14px', 
-            padding: '4px 8px', 
-            borderRadius: '12px',
-            background: coveragePercentage >= 80 ? '#16a34a' : '#f59e0b',
-            color: '#fff'
+            fontSize: '18px', 
+            fontWeight: 'bold',
+            padding: '6px 16px', 
+            borderRadius: '16px',
+            background: coveragePercentage >= 50 ? '#16a34a' : '#f59e0b',
+            color: '#fff',
+            display: 'inline-block',
+            marginTop: '4px'
           }}>
-            {coveragePercentage >= 80 ? 'GOOD' : 'IN PROGRESS'}
+            {coveragePercentage >= 50 ? '✓ GOOD' : 'IN PROGRESS'}
           </span>
         </div>
       </div>
@@ -84,6 +88,20 @@ export const ExtendsTestCasesTable = () => {
       total: groupItems.length
     };
   };
+  
+  // Helper function to format test count display
+  const formatTestCount = (testCase) => {
+    if (!testCase?.testCount) return '';
+    const breakdown = testCase.testBreakdown;
+    if (!breakdown) return `${testCase.testCount} tests`;
+    
+    const parts = [];
+    if (breakdown.dist) parts.push(`${breakdown.dist} dist`);
+    if (breakdown.customElements) parts.push(`${breakdown.customElements} CE`);
+    if (breakdown.hydrate) parts.push(`${breakdown.hydrate} hydrate`);
+    
+    return `${testCase.testCount} tests (${parts.join(' + ')})`;
+  };
 
   const allRows = [
     // 🟢 Basic Inheritance (1-2)
@@ -95,7 +113,7 @@ export const ExtendsTestCasesTable = () => {
         <>
           <strong>🟢 Basic:</strong> Foundation lifecycle inheritance pattern<br/>
           <strong>Coverage:</strong> componentWillLoad, componentDidLoad, componentWillRender, componentDidRender, componentWillUpdate, componentDidUpdate<br/>
-          <small>Uses Global Array Pattern | ES2022 Build Target | 6 passing tests</small>
+          <small>Uses Global Array Pattern | ES2022 Build Target | {formatTestCount(testCaseStatus[1])}</small>
         </>
       ),
       tested: getGroupStats('lifecycle').tested,
@@ -110,75 +128,106 @@ export const ExtendsTestCasesTable = () => {
         <>
           <strong>🟢 Basic:</strong> Multi-level inheritance chains (Component → ParentBase → GrandparentBase)<br/>
           <strong>Advanced Features:</strong> super() call chains, event ordering, inheritance chain integrity<br/>
-          <small>Uses Global Array Pattern | ES2022 Build Target | 7 passing tests</small>
+          <small>Uses Global Array Pattern | ES2022 Build Target | {formatTestCount(testCaseStatus[2])}</small>
         </>
       ),
       tested: getGroupStats('multilevel').tested,
       total: getGroupStats('multilevel').total,
       section: testCaseStatus[2]?.implemented ? 'implemented' : 'missing',
     },
-    // 🟡 Standard Patterns (3-6)
-    {
-      id: 3,
-      implemented: testCaseStatus[3]?.implemented || false,
-      desc: testCaseStatus[3]?.description || '',
-      types: (
-        <>
-          <strong>🟡 Standard:</strong> Components extend Stencil-decorated abstract base classes<br/>
-          <strong>Property Inheritance:</strong> @Prop, @State, @Method inheritance<br/>
-          <small>Smoke tests for basic extends functionality</small>
-        </>
-      ),
-      tested: getGroupStats('abstract').tested,
-      total: getGroupStats('abstract').total,
-      section: testCaseStatus[3]?.implemented ? 'implemented' : 'missing',
-    },
-    {
-      id: 4,
-      implemented: testCaseStatus[4]?.implemented || false,
-      desc: testCaseStatus[4]?.description || '',
-      types: (
-        <>
-          <strong>🟡 Standard:</strong> Components extend other component classes<br/>
-          <strong>Property Inheritance:</strong> @Prop, @State, @Method inheritance<br/>
-          <small>Smoke tests for component-to-component inheritance</small>
-        </>
-      ),
-      tested: getGroupStats('component').tested,
-      total: getGroupStats('component').total,
-      section: testCaseStatus[4]?.implemented ? 'implemented' : 'missing',
-    },
-    {
-      id: 5,
-      implemented: testCaseStatus[5]?.implemented || false,
-      desc: testCaseStatus[5]?.description || '',
-      types: (
-        <>
-          <strong>🟡 Standard:</strong> Components extend classes from external Stencil projects<br/>
-          <strong>Cross-Package Inheritance:</strong> test-sibling library integration<br/>
-          <small>Smoke tests for external library inheritance</small>
-        </>
-      ),
-      tested: getGroupStats('external').tested,
-      total: getGroupStats('external').total,
-      section: testCaseStatus[5]?.implemented ? 'implemented' : 'missing',
-    },
+    // 🟡 Standard Patterns (6-9)
     {
       id: 6,
       implemented: testCaseStatus[6]?.implemented || false,
       desc: testCaseStatus[6]?.description || '',
       types: (
         <>
-          <strong>🟡 Standard:</strong> Components extend via Stencil Mixin function<br/>
-          <strong>Behavior Composition:</strong> Multiple behaviors composed into single component<br/>
-          <small>Smoke tests for mixin-based composition</small>
+          <strong>🟡 Standard:</strong> Components extend Stencil-decorated abstract base classes<br/>
+          <strong>Property Inheritance:</strong> @Prop, @State, @Method inheritance<br/>
+          <small>Comprehensive tests across all output targets | {formatTestCount(testCaseStatus[6])}</small>
         </>
       ),
       tested: getGroupStats('abstract').tested,
       total: getGroupStats('abstract').total,
       section: testCaseStatus[6]?.implemented ? 'implemented' : 'missing',
     },
-    // 🟢 Basic Inheritance (3-5)
+    {
+      id: 7,
+      implemented: testCaseStatus[7]?.implemented || false,
+      desc: testCaseStatus[7]?.description || '',
+      types: (
+        <>
+          <strong>🟡 Standard:</strong> Components extend other component classes<br/>
+          <strong>Property Inheritance:</strong> @Prop, @State, @Method inheritance<br/>
+          <small>Comprehensive tests across all output targets | {formatTestCount(testCaseStatus[7])}</small>
+        </>
+      ),
+      tested: getGroupStats('component').tested,
+      total: getGroupStats('component').total,
+      section: testCaseStatus[7]?.implemented ? 'implemented' : 'missing',
+    },
+    {
+      id: 8,
+      implemented: testCaseStatus[8]?.implemented || false,
+      desc: testCaseStatus[8]?.description || '',
+      types: (
+        <>
+          <strong>🟡 Standard:</strong> Components extend classes from external Stencil projects<br/>
+          <strong>Cross-Package Inheritance:</strong> test-sibling library integration<br/>
+          <small>Comprehensive tests across all output targets | {formatTestCount(testCaseStatus[8])}</small>
+        </>
+      ),
+      tested: getGroupStats('external').tested,
+      total: getGroupStats('external').total,
+      section: testCaseStatus[8]?.implemented ? 'implemented' : 'missing',
+    },
+    {
+      id: 9,
+      implemented: testCaseStatus[9]?.implemented || false,
+      desc: testCaseStatus[9]?.description || '',
+      types: (
+        <>
+          <strong>🟡 Standard:</strong> Components extend via Stencil Mixin function<br/>
+          <strong>Behavior Composition:</strong> Multiple behaviors composed into single component<br/>
+          <small>Comprehensive tests across all output targets | {formatTestCount(testCaseStatus[9])}</small>
+        </>
+      ),
+      tested: getGroupStats('mixin').tested,
+      total: getGroupStats('mixin').total,
+      section: testCaseStatus[9]?.implemented ? 'implemented' : 'missing',
+    },
+    // 🔵 Advanced Reactive Controllers (12-12a)
+    {
+      id: 12,
+      implemented: testCaseStatus[12]?.implemented || false,
+      desc: testCaseStatus[12]?.description || '',
+      types: (
+        <>
+          <strong>🔵 Advanced:</strong> Controller-initiated updates (ClockController pattern from Lit)<br/>
+          <strong>Reactive Controller:</strong> Base class triggers host updates via requestUpdate pattern<br/>
+          <small>Simulates Lit's ReactiveController interface | {formatTestCount(testCaseStatus[12])}</small>
+        </>
+      ),
+      tested: getGroupStats('controller').tested,
+      total: getGroupStats('controller').total,
+      section: testCaseStatus[12]?.implemented ? 'implemented' : 'missing',
+    },
+    {
+      id: '12a',
+      implemented: testCaseStatus['12a']?.implemented || false,
+      desc: testCaseStatus['12a']?.description || '',
+      types: (
+        <>
+          <strong>🔵 Advanced:</strong> Direct State Management (Stencil's superior approach vs Lit)<br/>
+          <strong>Simplified Pattern:</strong> Base class owns @State directly - no controller complexity needed<br/>
+          <small>Demonstrates Stencil advantages over Lit | {formatTestCount(testCaseStatus['12a'])}</small>
+        </>
+      ),
+      tested: getGroupStats('direct-state').tested,
+      total: getGroupStats('direct-state').total,
+      section: testCaseStatus['12a']?.implemented ? 'implemented' : 'missing',
+    },
+    // 🟢 Basic Inheritance (3-5) - TODO
     {
       id: 3,
       implemented: testCaseStatus[3]?.implemented || false,
@@ -224,67 +273,6 @@ export const ExtendsTestCasesTable = () => {
       total: getGroupStats('render').total,
       section: testCaseStatus[5]?.implemented ? 'implemented' : 'missing',
     },
-    // 🟡 Standard Patterns (6-11)
-    {
-      id: 6,
-      implemented: testCaseStatus[6]?.implemented || false,
-      desc: testCaseStatus[6]?.description || '',
-      types: (
-        <>
-          <strong>🟡 Standard:</strong> Components extend Stencil-decorated abstract base classes<br/>
-          <strong>Property Inheritance:</strong> @Prop, @State, @Method inheritance<br/>
-          <small>Smoke tests for basic extends functionality</small>
-        </>
-      ),
-      tested: getGroupStats('abstract').tested,
-      total: getGroupStats('abstract').total,
-      section: testCaseStatus[6]?.implemented ? 'implemented' : 'missing',
-    },
-    {
-      id: 7,
-      implemented: testCaseStatus[7]?.implemented || false,
-      desc: testCaseStatus[7]?.description || '',
-      types: (
-        <>
-          <strong>🟡 Standard:</strong> Components extend other component classes<br/>
-          <strong>Property Inheritance:</strong> @Prop, @State, @Method inheritance<br/>
-          <small>Smoke tests for component-to-component inheritance</small>
-        </>
-      ),
-      tested: getGroupStats('component').tested,
-      total: getGroupStats('component').total,
-      section: testCaseStatus[7]?.implemented ? 'implemented' : 'missing',
-    },
-    {
-      id: 8,
-      implemented: testCaseStatus[8]?.implemented || false,
-      desc: testCaseStatus[8]?.description || '',
-      types: (
-        <>
-          <strong>🟡 Standard:</strong> Components extend classes from external Stencil projects<br/>
-          <strong>Cross-Package Inheritance:</strong> test-sibling library integration<br/>
-          <small>Smoke tests for external library inheritance</small>
-        </>
-      ),
-      tested: getGroupStats('external').tested,
-      total: getGroupStats('external').total,
-      section: testCaseStatus[8]?.implemented ? 'implemented' : 'missing',
-    },
-    {
-      id: 9,
-      implemented: testCaseStatus[9]?.implemented || false,
-      desc: testCaseStatus[9]?.description || '',
-      types: (
-        <>
-          <strong>🟡 Standard:</strong> Components extend via Stencil Mixin function<br/>
-          <strong>Behavior Composition:</strong> Multiple behaviors composed into single component<br/>
-          <small>Smoke tests for mixin-based composition</small>
-        </>
-      ),
-      tested: getGroupStats('mixin').tested,
-      total: getGroupStats('mixin').total,
-      section: testCaseStatus[9]?.implemented ? 'implemented' : 'missing',
-    },
     {
       id: 10,
       implemented: testCaseStatus[10]?.implemented || false,
@@ -323,25 +311,54 @@ export const ExtendsTestCasesTable = () => {
 <ExtendsTestCasesTable />
 
 
-## Next Steps
+## Test Summary
 
-**🟢 Basic Inheritance (2/5 Complete):**
-1. ✅ **Test Case #1**: Lifecycle inheritance fully implemented (6 passing tests)
-2. ✅ **Test Case #2**: Multi-level lifecycle inheritance fully implemented (7 passing tests)
-3. **📋 Test Case #3 TODO**: Property & State Inheritance Basics - @Prop and @State without conflicts
-4. **📋 Test Case #4 TODO**: Method Inheritance Basics - @Method inheritance and super() calls
-5. **📋 Test Case #5 TODO**: Render Method Inheritance - Basic render() inheritance and template composition
+### ✅ Implemented & Passing (66 Total Tests)
 
-**🟡 Standard Patterns (4/6 Complete):**
-6. ✅ **Test Case #6**: Abstract base class inheritance (smoke tests)
-7. ✅ **Test Case #7**: Component-to-component inheritance (smoke tests)
-8. ✅ **Test Case #8**: External library inheritance (smoke tests) 
-9. ✅ **Test Case #9**: Mixin composition (smoke tests)
-10. **📋 Test Case #10 TODO**: Event Handling Inheritance - @Listen decorators and event propagation
-11. **📋 Test Case #11 TODO**: Watch Decorator Inheritance - @Watch behavior through inheritance chains
+#### 🟢 Basic Lifecycle (2/2 Complete - 13 tests)
 
-**Next Steps:**
-   - **Test Cases #3-5**: Complete foundational Basic Inheritance patterns (Properties, Methods, Render)
-   - **Test Cases #10-11**: Core decorator inheritance (Event handling, Watch decorators)
-   - **Advanced Real-World Controllers**: Implement production-ready reactive controller examples demonstrating real business value
-   - **Robustness & Production**: Add decorator conflicts, compiler behavior, SSR/hydration, and production-critical edge cases
+1. ✅ **Test Case #1**: Lifecycle inheritance (6 tests: 5 dist + 1 CE)
+
+2. ✅ **Test Case #2**: Multi-level lifecycle inheritance (7 tests: 6 dist + 1 CE)
+
+#### 🟡 Standard Patterns (4/4 Complete - 48 tests)
+
+6. ✅ **Test Case #6**: Abstract base class inheritance (12 tests: 5 dist + 5 CE + 2 hydrate)
+
+7. ✅ **Test Case #7**: Component-to-component inheritance (12 tests: 5 dist + 5 CE + 2 hydrate)
+
+8. ✅ **Test Case #8**: External library inheritance (12 tests: 5 dist + 5 CE + 2 hydrate)
+
+9. ✅ **Test Case #9**: Mixin composition (12 tests: 5 dist + 5 CE + 2 hydrate)
+
+#### 🔵 Advanced Reactive Controllers (1/2 Complete - 5 tests)
+
+12. ✅ **Test Case #12**: Controller-initiated updates (5 tests: 4 dist + 1 CE)
+
+12a. 📋 **Test Case #12a TODO**: Direct state management - component built, tests exist but not in suite
+
+---
+
+## 📋 TODO - Remaining Test Cases
+
+### 🟢 Basic Inheritance (3/5 remaining)
+
+3. **Test Case #3 TODO**: Property & State Inheritance Basics
+4. **Test Case #4 TODO**: Method Inheritance Basics  
+5. **Test Case #5 TODO**: Render Method Inheritance
+
+### 🟡 Standard Patterns (2/6 remaining)
+
+10. **Test Case #10 TODO**: Event Handling Inheritance (@Listen decorators)
+11. **Test Case #11 TODO**: Watch Decorator Inheritance (@Watch behavior)
+
+### 🔵 Advanced Real-World (3 remaining)
+
+12a. **Test Case #12a TODO**: Direct State Management - component and tests exist, need to add to suite  
+13. **Test Case #13 TODO**: FloatingUI Controller (Popper.js integration)  
+14. **Test Case #14 TODO**: ValidationController (Form validation)
+
+### 🔴 Robustness & Production (2 remaining)
+
+15. **Test Case #15 TODO**: Decorator Conflicts & Edge Cases  
+16. **Test Case #16 TODO**: SSR & Hydration behavior
