Include a last run timestamp

--- a/test/storybook/docs/Testing/Behavior/Extends/Overview.mdx
+++ b/test/storybook/docs/Testing/Behavior/Extends/Overview.mdx
@@ -60,8 +60,11 @@ export const ExtendsCoverageSummary = () => {
         <div style={{ fontSize: '36px', fontWeight: '700', color: '#16a34a', lineHeight: '1', marginBottom: '6px' }}>
           {totalTests}
         </div>
-        <div style={{ fontSize: '13px', color: '#15803d' }}>
+        <div style={{ fontSize: '13px', color: '#15803d', marginBottom: '8px' }}>
           All tests passing ✓
+        </div>
+        <div style={{ fontSize: '11px', color: '#15803d', opacity: 0.8, borderTop: '1px solid #86efac', paddingTop: '8px', marginTop: '8px' }}>
+          📅 Last run: Nov 9, 2025 at 7:03 PM PST
         </div>
       </div>
       
